# daily-coding-problems

./: .gitignore  README.md  pyproject.toml
2020-10-14.problem-680/: README.md
_problems/: 0004.md  0009.md  0012.md  0016.md  0019.md  0024.md  0031.md  0032.md  0038.md  0039.md  0041.md  0044.md  0052.md  0055.md  0056.md  0059.md  0060.md  0064.md  0066.md  0067.md  0068.md  0070.md  0071.md  0074.md  0075.md  0077.md  0082.md  0084.md  0086.md  0087.md  0090.md  0097.md  0101.md  0102.md  0103.md  0104.md  0105.md  0106.md  0107.md  0108.md  (+109 more)
elixir/.devcontainer/: Dockerfile  devcontainer.json
golang/.devcontainer/: devcontainer.json
golang/problem0002/: go.mod  solution.go
golang/problem0070/: go.mod  solution.go  solution_test.go
golang/problem2/: solution_test.go
golang/problem70/: Makefile  solution.go
purescript/.devcontainer/: Dockerfile  devcontainer.json
python/.devcontainer/: devcontainer.json
python/problem-680/: test_solution.py
python/problem0070/: Makefile
python/problem70/: solution.py
rust/.devcontainer/: Dockerfile  devcontainer.json
rust/hello-world/: Cargo.toml
rust/hello-world/src/: main.rs
rust/problem0070/: Cargo.toml  Makefile
rust/problem0070/src/: main.rs
rust/problem70/: Cargo.toml  Makefile
rust/problem70/src/: main.rs
scala/.devcontainer/: Dockerfile  devcontainer.json
scala/HelloScalaTest/: built.sbt
scala/HelloWorld/: build.sbt
scala/HelloWorld/.bsp/: sbt.json
scala/problem0070/: build.sbt
typescript/: tsconfig.json
typescript/.devcontainer/: Dockerfile  devcontainer.json
(+3 files in other folders)
