[tool.poetry]
name = "daily-coding-problems"
version = "0.1.0"
description = ""
authors = ["Brian J Brennan <brianloveswords@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
hypothesis = "^5.37.1"
pytest = "^6.1.1"
black = "^20.8b1"
mypy = "^0.790"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
black = {version = "^20.8b1", allow-prereleases = true}
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
